[gd_scene load_steps=12 format=3 uid="uid://cx3urgdvffso"]

[ext_resource type="Texture2D" uid="uid://djkiuo46y4bxd" path="res://assets/images/tiles.png" id="1_aakgu"]
[ext_resource type="Shader" path="res://forest.gdshader" id="1_jpy4c"]
[ext_resource type="Script" path="res://WorldTilemap.gd" id="2_eqf4i"]
[ext_resource type="PackedScene" uid="uid://bi3e3duqtg0cl" path="res://player.tscn" id="3_bga5v"]
[ext_resource type="PackedScene" uid="uid://c3l15dom0jlja" path="res://small_truck.tscn" id="6_xh7i8"]
[ext_resource type="Script" path="res://scripts/EnemySpawner.gd" id="7_nemhn"]
[ext_resource type="Script" path="res://scripts/BuffSpawner.gd" id="8_xfww7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_30kd8"]
shader = ExtResource("1_jpy4c")
shader_parameter/color_shift = Color(0.74, 0.656133, 0.4884, 1)
shader_parameter/shadow = Color(0.137255, 0.0784314, 0.258824, 1)
shader_parameter/mix_value = 0.615

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_q7lvn"]
texture = ExtResource("1_aakgu")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/custom_data_0 = true
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/custom_data_4 = true
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, -4, -1.875, -4, -4, -2, -4, 1.8125, -2.25, 4, 1.8125, 4, 4, 2.0625, 4, -2.125, 2, -4)
2:0/0/custom_data_1 = true
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/custom_data_2 = true
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/custom_data_0 = true
0:1/0/custom_data_5 = true
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/custom_data_4 = true
1:1/0/custom_data_5 = true
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/custom_data_3 = true
1:2/0/custom_data_4 = true
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/custom_data_0 = true
0:2/0/custom_data_3 = true

[sub_resource type="TileSet" id="TileSet_ymb5i"]
tile_size = Vector2i(8, 8)
physics_layer_0/collision_layer = 1
custom_data_layer_0/name = "Grass"
custom_data_layer_0/type = 1
custom_data_layer_1/name = "Stone"
custom_data_layer_1/type = 1
custom_data_layer_2/name = "Water"
custom_data_layer_2/type = 1
custom_data_layer_3/name = "Ashes"
custom_data_layer_3/type = 1
custom_data_layer_4/name = "Trees"
custom_data_layer_4/type = 1
custom_data_layer_5/name = "Fire"
custom_data_layer_5/type = 1
sources/0 = SubResource("TileSetAtlasSource_q7lvn")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_6deaj"]
seed = 340
frequency = 0.2
fractal_octaves = 2
fractal_lacunarity = 4.09

[node name="World" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
material = SubResource("ShaderMaterial_30kd8")
tile_set = SubResource("TileSet_ymb5i")
format = 2
layer_0/tile_data = PackedInt32Array(0, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 4, 65536, 0, 3, 0, 0, 2, 0, 0, 1, 0, 0, 131072, 65536, 0, 196608, 65536, 0, 262144, 65536, 0, 327680, 65536, 0, 393216, 131072, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 65536, 0, 458756, 65536, 0, 458757, 196608, 0, 458758, 196608, 0, 458759, 196608, 0, 393223, 196608, 0, 327687, 65536, 0, 262151, 65536, 0, 196615, 65536, 0, 131079, 65536, 0, 65543, 65536, 0, 7, 65536, 0, 6, 65536, 0, 5, 65536, 0, 131076, 0, 0, 196611, 65536, 0, 262147, 65536, 0, 327683, 65536, 0, 393219, 65536, 0, 393220, 65536, 0, 393221, 65536, 0, 327686, 65536, 0, 262150, 65536, 0, 65542, 65536, 0, 131078, 65536, 0, 196614, 65536, 0, 393222, 196608, 0, 327685, 65536, 0, 262149, 65536, 0, 196613, 65536, 0, 131077, 65536, 0, 196612, 65536, 0, 262148, 65536, 0, 327684, 65536, 0, 131075, 0, 0, 131074, 65536, 0, 196610, 65536, 0, 196609, 65536, 0, 262145, 65536, 0, 327681, 131072, 0, 262146, 65536, 0, 393217, 131072, 0, 393218, 0, 0, 327682, 65536, 0, 131073, 65536, 0)
script = ExtResource("2_eqf4i")
noise = SubResource("FastNoiseLite_6deaj")
gradient = Array[Color]([Color(0.66, 0.5544, 0.5544, 1), Color(0.66, 0.56144, 0.4752, 1), Color(0.66, 0.66, 0.5544, 1), Color(0.60555, 0.66, 0.561, 1), Color(0.56265, 0.66, 0.561, 1), Color(0.561, 0.66, 0.65505, 1), Color(0.396, 0.66, 0.6512, 1), Color(0.4818, 0.53823, 0.66, 1), Color(0.43692, 0.4026, 0.66, 1), Color(0.61523, 0.5874, 0.66, 1), Color(0.79, 0.6162, 0.784207, 1), Color(0.74, 0.656133, 0.4884, 1)])

[node name="Player" parent="." instance=ExtResource("3_bga5v")]

[node name="EnemySpawner" type="Node2D" parent="."]
script = ExtResource("7_nemhn")

[node name="NormalTimer" type="Timer" parent="EnemySpawner"]
wait_time = 5.0
autostart = true

[node name="HeliSpawns" type="Node2D" parent="EnemySpawner"]

[node name="Marker2D" type="Marker2D" parent="EnemySpawner/HeliSpawns"]
position = Vector2(59, -4)

[node name="Marker2D2" type="Marker2D" parent="EnemySpawner/HeliSpawns"]
position = Vector2(6, -4)

[node name="BossTimer" type="Timer" parent="EnemySpawner"]
wait_time = 30.0
one_shot = true
autostart = true

[node name="TruckSpawns" type="Node2D" parent="EnemySpawner"]

[node name="1" type="Node2D" parent="EnemySpawner/TruckSpawns"]

[node name="Marker2D" type="Marker2D" parent="EnemySpawner/TruckSpawns/1"]
position = Vector2(0, 64)

[node name="SmallTruck" parent="EnemySpawner/TruckSpawns/1/Marker2D" instance=ExtResource("6_xh7i8")]

[node name="Marker2D2" type="Marker2D" parent="EnemySpawner/TruckSpawns/1"]
position = Vector2(16, 64)

[node name="SmallTruck" parent="EnemySpawner/TruckSpawns/1/Marker2D2" instance=ExtResource("6_xh7i8")]

[node name="Marker2D3" type="Marker2D" parent="EnemySpawner/TruckSpawns/1"]
position = Vector2(32, 64)

[node name="SmallTruck" parent="EnemySpawner/TruckSpawns/1/Marker2D3" instance=ExtResource("6_xh7i8")]

[node name="Marker2D4" type="Marker2D" parent="EnemySpawner/TruckSpawns/1"]
position = Vector2(48, 64)

[node name="SmallTruck" parent="EnemySpawner/TruckSpawns/1/Marker2D4" instance=ExtResource("6_xh7i8")]

[node name="2" type="Node2D" parent="EnemySpawner/TruckSpawns"]
position = Vector2(8, 0)

[node name="Marker2D" type="Marker2D" parent="EnemySpawner/TruckSpawns/2"]
position = Vector2(0, 64)

[node name="SmallTruck" parent="EnemySpawner/TruckSpawns/2/Marker2D" instance=ExtResource("6_xh7i8")]

[node name="Marker2D2" type="Marker2D" parent="EnemySpawner/TruckSpawns/2"]
position = Vector2(16, 64)

[node name="SmallTruck" parent="EnemySpawner/TruckSpawns/2/Marker2D2" instance=ExtResource("6_xh7i8")]

[node name="Marker2D3" type="Marker2D" parent="EnemySpawner/TruckSpawns/2"]
position = Vector2(32, 64)

[node name="SmallTruck" parent="EnemySpawner/TruckSpawns/2/Marker2D3" instance=ExtResource("6_xh7i8")]

[node name="Marker2D4" type="Marker2D" parent="EnemySpawner/TruckSpawns/2"]
position = Vector2(48, 64)

[node name="SmallTruck" parent="EnemySpawner/TruckSpawns/2/Marker2D4" instance=ExtResource("6_xh7i8")]

[node name="TruckActivate" type="Timer" parent="EnemySpawner"]
wait_time = 2.0
one_shot = true
autostart = true

[node name="TruckCooldown" type="Timer" parent="EnemySpawner"]
wait_time = 10.0
one_shot = true

[node name="TruckWave" type="Timer" parent="EnemySpawner"]
one_shot = true

[node name="BuffSpawner" type="Node2D" parent="."]
visible = false
script = ExtResource("8_xfww7")

[node name="Top" type="Node2D" parent="BuffSpawner"]

[node name="Marker2D" type="Marker2D" parent="BuffSpawner/Top"]
position = Vector2(10, -4)

[node name="Marker2D2" type="Marker2D" parent="BuffSpawner/Top"]
position = Vector2(23, -4)

[node name="Marker2D3" type="Marker2D" parent="BuffSpawner/Top"]
position = Vector2(42, -4)

[node name="Marker2D4" type="Marker2D" parent="BuffSpawner/Top"]
position = Vector2(62, -4)

[node name="Timer" type="Timer" parent="BuffSpawner"]
wait_time = 15.0
one_shot = true
autostart = true

[connection signal="timeout" from="EnemySpawner/NormalTimer" to="EnemySpawner" method="_on_normal_timer_timeout"]
[connection signal="timeout" from="EnemySpawner/BossTimer" to="EnemySpawner" method="_on_boss_timer_timeout"]
[connection signal="timeout" from="EnemySpawner/TruckActivate" to="EnemySpawner" method="_on_truck_activate_timeout"]
[connection signal="timeout" from="EnemySpawner/TruckCooldown" to="EnemySpawner" method="_on_truck_cooldown_timeout"]
[connection signal="timeout" from="EnemySpawner/TruckWave" to="EnemySpawner" method="_on_truck_wave_timeout"]
[connection signal="timeout" from="BuffSpawner/Timer" to="BuffSpawner" method="_on_timer_timeout"]
